--- a/README
+++ b/README
@@ -1,8 +1,6 @@
 A guide to Python's magic methods. Written by Rafe Kettler in the year 2011.
 
-May be reproduced at will (even with modifications) under 2 conditions:
-1.) Permission has been obtained from the author, Rafe Kettler
-2.) Credit is given to the author, Rafe Kettler, at some prominent place in the document (in the first 10 lines, preferably in bold or large font).
+Licensed under Creative Commons CC--NC-BY-SA (see http://creativecommons.org/licenses/by-nc-sa/3.0/). Basically, noncommercial, requires attribution, must be reproduced with a similar license. 'Nuff said.
 
 Can be seen at http://www.rafekettler.com/magicmethods.html in relatively up to date form.
 
