New appendix detailing syntax to invoke methods.
This includes a good deal of associated changes -- magicmarkdown.py has changed to markup the appendix, new appendix.mkd file containing the appendix, and CSS rules for tables.

--- a/magicmethods.mkd
+++ b/magicmethods.mkd
@@ -773,7 +773,7 @@ What happens? Exactly what you expect. It's just like we had `data` all along.
 
 ###Pickling your own Objects###
 
-Pickling isn't just for builtin types. It's for any class that follows the pickle protocol. The pickle 
+Pickling isn't just for built-in types. It's for any class that follows the pickle protocol. The pickle 
 protocol has four optional methods for Python objects to customize how they act (it's a bit different for 
 C extensions, but that's not in our scope):
 
