--- a/magicmethods.mkd
+++ b/magicmethods.mkd
@@ -516,7 +516,8 @@ to from other languages (Haskell, for example).
         def __init__(self, values=None):
             if values is None:
                 self.values = []
-            self.values = values
+            else:
+                self.values = values
         
         def __len__(self):
             return len(self.values)
