--- a/magicmethods.mkd
+++ b/magicmethods.mkd
@@ -216,8 +216,6 @@ the most part, pretty self-explanatory.
 `__xor__(self, other)`
 :    Implements bitwise xor using the `^` operator.
 
-
-
 ####Reflected arithmetic operators####
 
 You know how I said I would get to reflected arithmetic in a bit? Some of you might think it's some big, 
@@ -505,8 +503,10 @@ Without any more wait, here are the magic methods that containers use:
 :    Called to implement behavior for the `reversed()` built in function. Should return a reversed version of the list.
 
 `__contains__(self, item)`
-:    Last but not least, `__contains__` defines behavior for membership tests using `in` and `not in`. Why isn't this part of a sequence protocol, you ask? Because when `__contains__` isn't defined, Python just iterates over the sequence and returns `True` if it comes across the item it's looking for.
+:    `__contains__` defines behavior for membership tests using `in` and `not in`. Why isn't this part of a sequence protocol, you ask? Because when `__contains__` isn't defined, Python just iterates over the sequence and returns `True` if it comes across the item it's looking for.
 
+`__concat__(self, other)`
+:    Lastly, you can define behavior for concatenating your sequence with another by defining `__concat__`. It should return a new sequence constructed from `self` and `other`. `__concat__` is invoked with the `+` operator when it is called on two sequences.    
 
 
 ####An example####
