--- a/magicmethods.mkd
+++ b/magicmethods.mkd
@@ -422,7 +422,7 @@ You can easily cause a problem in your definitions of any of the methods control
         self.name = value
         # since every time an attribute is assigned, __setattr__() is called, this
         # is recursion.
-        # so this really means self.__setattr__(name, value). Since the method
+        # so this really means self.__setattr__('name', value). Since the method
         # keeps calling itself, the recursion goes on forever causing a crash
     
     def __setattr__(self, name, value):
@@ -436,7 +436,7 @@ So, what have we learned about custom attribute access in Python? It's not to be
 it tends to be excessively powerful and counter-intuitive. But the reason why it exists is to scratch a 
 certain itch: Python doesn't seek to make bad things impossible, but just to make them difficult. Freedom 
 is paramount, so you can really do whatever you want. Here's an example of some of the special attribute 
-access methods in action:
+access methods in action (note that we use `super` because not all classes have an attribute `__dict__`):
 
     :::python
     class AccessCounter:
@@ -444,18 +444,20 @@ access methods in action:
         The counter increments each time the value is changed.'''
         
         def __init__(self, val):
-            self.__dict__['counter'] = 0
-            self.__dict__['value'] = val
-        
+            super(AccessCounter, self).__setattr__('counter', 0)
+            super(AccessCounter, self).__setattr__('value', val)
+
         def __setattr__(self, name, value):
             if name == 'value':
-                self.__dict__['counter'] += 1
-                self.__dict__['value'] = value
-        
+                super(AccessCounter, self).__setattr__('counter', self.counter + 1)
+            # Make this unconditional.
+            # If you want to prevent other attributes to be set, raise AttributeError(name)
+            super(AccessCounter, self).__setattr__(name, value)
+
         def __delattr__(self, name):
             if name == 'value':
-                self.__dict__['counter'] += 1
-                del self.__dict__['value']
+                super(AccessCounter, self).__setattr__('counter', self.counter + 1)
+            super(AccessCounter, self).__delattr__(name)]
 
 ##<a id="sequence" href="#sequence">Making Custom Sequences</a>##
 
@@ -601,7 +603,7 @@ another powerful convenience feature that makes programming in Python that much 
 
 
 `__call__(self, [args...])`
-:    Allows an instance of a class to be called as a function. Essentially, this means that `x()` is the same as `x.__call__()`. Note that `__call__` takes a variable number of arguments; this means that you define `__call__` as you would any other function, taking however many functions you'd like it to.
+:    Allows an instance of a class to be called as a function. Essentially, this means that `x()` is the same as `x.__call__()`. Note that `__call__` takes a variable number of arguments; this means that you define `__call__` as you would any other function, taking however many arguments you'd like it to.
 
 
 
